fixed spacing

--- a/lesson11/fishhaven/css/small.css
+++ b/lesson11/fishhaven/css/small.css
@@ -163,10 +163,10 @@ img{
     padding: .5em;
 }
 section{
-    padding: 1em;
+    padding: 2em;
 }
 .fair{
-    width: 40%;
+    width: 300px;
     float: right;
 }
 .article{
